[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Mass/Level2/Bow/Bow.gd" type="Script" id=1]
[ext_resource path="res://Assets/Mass/Level2/Bow/HuntingBow.png" type="Texture" id=2]

[node name="Bow" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.274, 0.274 )
texture = ExtResource( 2 )

[node name="RestPosition" type="Position2D" parent="."]

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
